<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_disciplines"
            android:icon="@drawable/ic_drawer_results"
            android:title="@string/disciplines"/>

        <item
            android:id="@+id/drawer_events"
            android:icon="@drawable/ic_drawer_results"
            android:title="@string/events"/>

        <item
            android:id="@+id/drawer_locations"
            android:icon="@drawable/ic_location_on_white_24px"
            android:title="@string/locations"/>
        <item
            android:id="@+id/drawer_manufacturers"
            android:icon="@drawable/ic_drawer_results"
            android:title="@string/manufacturers"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/settings"/>

    </group>
</menu>