<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/discipline_new_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/layout_padding_in_scrollview"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/disciplineID_text"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/DisciplineID"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/disciplineID"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Not_assigned"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineName_text_input_layout"
                android:layout_width="match_parent"
                android:layout_below="@id/disciplineID_text"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/disciplineName_text_input_layout"
                android:text="@string/total_shots"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineTotalShots_input_layout"
                android:layout_width="@dimen/input_field_width"
                android:layout_below="@id/disciplineName_text_input_layout"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineTotalShots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:hint="@string/shots"
                    android:inputType="number"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/disciplineTotalShots_input_layout"
                android:text="@string/number_of_passes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineNumberOfPasses_input_layout"
                android:layout_width="@dimen/input_field_width"
                android:layout_below="@id/disciplineTotalShots_input_layout"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineNumberOfPasses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/textView2"
                    android:inputType="number"
                    android:hint="@string/series"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/disciplineNumberOfPasses_input_layout"
                android:text="@string/time_in_minutes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineTimeInMinutes_input_layout"
                android:layout_width="@dimen/input_field_width"
                android:layout_below="@id/disciplineNumberOfPasses_input_layout"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineTimeInMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/minutes"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/disciplineTimeInMinutes_input_layout"
                android:text="@string/distance_in_meters"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineDistanceInMeters_input_layout"
                android:layout_width="@dimen/input_field_width"
                android:layout_below="@id/disciplineTimeInMinutes_input_layout"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineDistanceInMeters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/meters"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/disciplineInfo_text_input_layout"
                android:layout_width="match_parent"
                android:layout_below="@id/disciplineDistanceInMeters_input_layout"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disciplineInfos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes"
                    android:inputType="text"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
