<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_new_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/layout_padding_in_scrollview"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/locationID_text"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/LocationID"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/locationID"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Not_assigned"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/locationName_text_input_layout"
                android:layout_width="match_parent"
                android:layout_below="@id/locationID_text"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/locationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/locationAddress_text_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/locationName_text_input_layout"
                android:text="@string/address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/locationAddress_input_layout"
                android:layout_width="@dimen/input_field_width"
                android:layout_below="@id/locationName_text_input_layout"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/locationAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:hint="@string/street_city"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:textColor="@color/text_secondary" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
